# WoW-Pascal-Compiler

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  pascal.l  pascal.y
src/AST/: declation.hpp  expression.hpp  identifier.hpp  node.hpp  program.hpp  statement.hpp  type.hpp
src/codegen/: CodeGenContext.cpp  CodeGenContext.h  declaration.cpp  expression.cpp  identifier.cpp  program.cpp  statement.cpp  type.cpp
src/utils/: ast.hpp
test/: 1.ll  array  array.ll  array.pas  array.s  calc.ll  calc.pas  calc.s  conditional  conditional.ll  conditional.pas  conditional.s  conditional_o.ll  expr  expr.ll  expr.pas  expr.s  expr_o.ll  exprcheck.ll  exprcheck.pas  exprcheck_o.ll  fib  fib.pas  fib.s  func  func.ll  func.pas  func.s  funcif.ll  funcif.pas  funcs  funcs.ll  funcs.pas  funcs.s  goto1.pas  llvm.ll  llvm.pas  loop  loop.ll  loop.pas  (+32 more)
